--- a/app/views/informations/index.html.erb
+++ b/app/views/informations/index.html.erb
@@ -21,8 +21,8 @@
   </header>
   <main>
     <section class="fv-section">
-      <p class="main-copy">プロトタイピングをサービス改善のエンジンに</p>
-      <p class="fv-text">ユーザーを「ファン」に変えるプロトタイピング推進ツール</p>
+      <p class="main-copy">またつまらぬものを買ってしまったあなたに</p>
+      <p class="fv-text">計画的な買い物の推進ツール</p>
       <a href="#" class="cta-btn">使ってみる</a>
     </section>
     <section class="card-section">
