--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,17 @@
-<h2>Sign up</h2>
+<body>
+<%= render 'shared/header' %>
 
+<main>
+<section class="fv-section">
+
+<h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -27,3 +37,7 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</main>
+
+<%= render 'shared/footer' %>
+</body>
