--- a/app/views/users/registrations/detail.html.erb
+++ b/app/views/users/registrations/detail.html.erb
@@ -11,7 +11,22 @@
 <body>
 <%= render 'shared/header' %>
   <main>
-    <section class="fv-section">
+    <section class="mypage">
+      <p class="action">収支関係</p>
+        
+      <p class="myhouse">居室関係</p>
+        <a class="">
+      <p class="seller">購買関係</p>
+        
+
+
+
+
+
+
+
+
+
 
   </main>
 <%= render 'shared/footer' %>
