--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,26 @@
-.h2 {
-  color: green;
+.mypage {
+  height: 100%;
+  display: flex;
+  .action {
+    background-color:plum;
+    width: 300px;
+    height: 600px;
+    
+  }
+
+  .myhouse {
+    background-color:palegreen;
+    width: 800px;
+    height:600px;
+    margin: auto;
+    text-align: center;
+      
+  }
+
+  .seller {
+    background-color:bisque;
+    width: 300px;
+    height: 600px;
+    color: black;
+  }
 }
