--- a/app/views/users/registrations/detail.html.erb
+++ b/app/views/users/registrations/detail.html.erb
@@ -12,16 +12,20 @@
 <%= render 'shared/header' %>
   <main>
     <section class="mypage">
-      <p class="action">収支関係</p>
+      <div class="action">収支関係</div>
         
-      <p class="myhouse">居室関係</p>
-        <a class="">
-      <p class="seller">購買関係</p>
-        
+      <div class="myhouse">居室関係</div>
 
-
-
-
+      <div class="seller">購買先一覧
+        <p>
+          家具家電
+          <a href="https://www.yamada-denki.jp/store/contents/?d=128">テックランドNew野並店</a>
+        </p>
+        <p>
+          <a href="https://itunes.apple.com">App Store</a>
+          <a href="https://store.google.com">Google Play</a>
+        </p>
+      </div>
 
 
 
