--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,26 +1,29 @@
 .mypage {
   height: 100%;
   display: flex;
+  text-align: left;
+  
   .action {
-    background-color:plum;
     width: 300px;
     height: 600px;
+    border: solid plum;
+    margin: 10px;
     
   }
 
   .myhouse {
-    background-color:palegreen;
     width: 800px;
     height:600px;
-    margin: auto;
-    text-align: center;
-      
+    border: solid palegreen;
+    margin: 10px;
   }
 
   .seller {
-    background-color:bisque;
     width: 300px;
     height: 600px;
+    border: solid bisque;
+    margin: 10px;
     color: black;
+
   }
 }
