--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,13 @@
   <header>
-    <h1><a href="/">Roomanager</a></h1>
+    <h1>Roomanager</h1>
     <nav>
       <ul class="header-links">
         <% if user_signed_in? %>
-          <%= link_to "登録変更", edit_user_registration_path, class: "header__right--btn" %>
+          <%= link_to "ユーザー登録変更", edit_user_registration_path, class: "header__right--btn" %>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
         <% else %>
           <%= link_to "ログイン", new_user_session_path, class: "header__right--btn" %>
-          <%= link_to "新規登録", new_user_registration_path, class: "header__right--btn" %>
+          <%= link_to "ユーザー新規登録", new_user_registration_path, class: "header__right--btn" %>
         <% end %>
       </ul>
     </nav>
