--- a/app/views/users/registrations/detail.html.erb
+++ b/app/views/users/registrations/detail.html.erb
@@ -18,8 +18,11 @@
           <nav>
             <ul class="header-links">
               <% if user_signed_in? %>
-                <%= link_to "######", edit_user_registration_path, class: "header__right--btn" %>
-                <%= link_to "######", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
+                <%= link_to "登録詳細", edit_user_registration_path, class: "header__right--btn" %>
+                <%= link_to "登録削除", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
+                <%= link_to "登録変更", edit_user_registration_path, class: "header__right--btn" %>
+                <%= link_to "新規登録", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
+
               <% else %>
                 <%= link_to "ログイン", new_user_session_path, class: "header__right--btn" %>
                 <%= link_to "新規登録", new_user_registration_path, class: "header__right--btn" %>
@@ -36,8 +39,8 @@
           <nav>
             <ul class="header-links">
               <% if user_signed_in? %>
-                <%= link_to "######", edit_user_registration_path, class: "header__right--btn" %>
-                <%= link_to "######", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
+                <%= link_to "店舗検索", edit_user_registration_path, class: "header__right--btn" %>
+                <%= link_to "店舗登録", destroy_user_session_path, method: :delete, class: "header__right--btn" %>
               <% else %>
                 <%= link_to "ログイン", new_user_session_path, class: "header__right--btn" %>
                 <%= link_to "新規登録", new_user_registration_path, class: "header__right--btn" %>
