--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,12 +2,12 @@
   height: 100%;
   display: flex;
   text-align: center;
-  .indoor {
-    width: 1000px;
+  .room {
+    width: 800px;
     height:600px;
     border: solid palegreen;
     margin: 10px;
-    .indoor_header {
+    .room_header {
       background-color:palegreen;
       height: 40px;
       display: flex;
@@ -19,12 +19,12 @@
   }
 
 
-  .outdoor {
-    width: 600px;
+  .item {
+    width: 800px;
     height: 600px;
     border: solid plum;
     margin: 10px;
-    .outdoor_header {
+    .item_header {
       background-color: plum;
       height: 40px;
       display: flex;
@@ -33,7 +33,7 @@
       padding: 0 60px;
       color: #fff;
     }
-    .outdoor_main {
+    .room_main {
       text-align: left;
     }
   }
