--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,6 +16,9 @@
       padding: 0 60px;
       color: #fff;
     }
+    .room_sider {
+      text-align: left;
+    }
   }
 
 
@@ -32,9 +35,6 @@
       align-items: center;
       padding: 0 60px;
       color: #fff;
-    }
-    .room_main {
-      text-align: left;
     }
   }
 }
